--- a/index.html
+++ b/index.html
@@ -6,11 +6,46 @@
 	<script type="text/javascript" src="drawclock.js"></script>
 </head>
 	<body>
-		<h1 style="width: 50%; text-align: center; font-family: arial">Klok kijken</h1>
-		<section style="width: 50%;">
-			<canvas width="800" height="800" id="canvas_clock" style="width:100%; height:100%">
-			Canvas tag not supported
-			</canvas>
-		</section>
+		<div style="width: 50%; float: left;">
+			<h1 style="text-align: center; font-family: arial">Klok kijken</h1>
+			<section>
+				<canvas width="800" height="800" id="canvas_clock" style="width:100%; height:100%">
+				Canvas tag not supported
+				</canvas>
+			</section>
+		</div>
+		<div style="width: 50%; float: left;">
+			<h1 style="text-align: center; font-family: arial">Kies een tijd</h1>
+			<select id="hours">
+				<option value="">Kies het uur</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10</option>
+				<option value="11">11</option>
+				<option value="12">12</option>
+			</select>
+			<select id="minutes">
+				<option value="">Kies de minuten</option>
+				<option value="0">0</option>
+				<option value="5">5</option>
+				<option value="10">10</option>
+				<option value="15">15</option>
+				<option value="20">20</option>
+				<option value="25">25</option>
+				<option value="30">30</option>
+				<option value="35">35</option>
+				<option value="40">40</option>
+				<option value="45">45</option>
+				<option value="50">50</option>
+				<option value="55">55</option>
+			</select>
+		</div>
 	</body>
 </html>
