--- a/index.html
+++ b/index.html
@@ -2,50 +2,61 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<link rel="stylesheet" type="text/css" href="clock.css">
 	<script type="text/javascript" src="jquery.js"></script>
 	<script type="text/javascript" src="drawclock.js"></script>
 </head>
 	<body>
-		<div style="width: 50%; float: left;">
-			<h1 style="text-align: center; font-family: arial">Klok kijken</h1>
+		<div class="column">
+			<h1>Klok kijken</h1>
 			<section>
-				<canvas width="800" height="800" id="canvas_clock" style="width:100%; height:100%">
+				<canvas id="canvas_clock" width="500" height="500" style="width:100%; height:100%">
 				Canvas tag not supported
 				</canvas>
 			</section>
 		</div>
-		<div style="width: 50%; float: left;">
-			<h1 style="text-align: center; font-family: arial">Kies een tijd</h1>
-			<select id="hours">
-				<option value="">Kies het uur</option>
-				<option value="1">1</option>
-				<option value="2">2</option>
-				<option value="3">3</option>
-				<option value="4">4</option>
-				<option value="5">5</option>
-				<option value="6">6</option>
-				<option value="7">7</option>
-				<option value="8">8</option>
-				<option value="9">9</option>
-				<option value="10">10</option>
-				<option value="11">11</option>
-				<option value="12">12</option>
-			</select>
-			<select id="minutes">
-				<option value="">Kies de minuten</option>
-				<option value="0">0</option>
-				<option value="5">5</option>
-				<option value="10">10</option>
-				<option value="15">15</option>
-				<option value="20">20</option>
-				<option value="25">25</option>
-				<option value="30">30</option>
-				<option value="35">35</option>
-				<option value="40">40</option>
-				<option value="45">45</option>
-				<option value="50">50</option>
-				<option value="55">55</option>
-			</select>
+		<div class="column">
+			<h1>Kies een tijd</h1>
+			<div id="choose-time">
+				<div class="form-row">
+					<div class="label-wrapper">
+						<label for="hours">Kies het uur: </label>
+					</div>
+					<select id="hours">
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+						<option value="6">6</option>
+						<option value="7">7</option>
+						<option value="8">8</option>
+						<option value="9">9</option>
+						<option value="10">10</option>
+						<option value="11">11</option>
+						<option value="12">12</option>
+					</select>
+				</div>
+				<div class="form-row">
+					<div class="label-wrapper">
+						<label for="minutes">Kies de minuten: </label>
+					</div>
+					<select id="minutes">
+						<option value="0">0</option>
+						<option value="5">5</option>
+						<option value="10">10</option>
+						<option value="15">15</option>
+						<option value="20">20</option>
+						<option value="25">25</option>
+						<option value="30">30</option>
+						<option value="35">35</option>
+						<option value="40">40</option>
+						<option value="45">45</option>
+						<option value="50">50</option>
+						<option value="55">55</option>
+					</select>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
