--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="clock.css">
 	<script type="text/javascript" src="jquery.js"></script>
+	<script type="text/javascript" src="jquery-ui-1.10.4.custom.min.js"></script>
 	<script type="text/javascript" src="drawclock.js"></script>
 </head>
 	<body>
