--- a/index.html
+++ b/index.html
@@ -17,46 +17,57 @@
 			</section>
 		</div>
 		<div class="column">
-			<h1>Kies een tijd</h1>
+			<h1>Speel met de klok</h1>
 			<div id="choose-time">
-				<div class="form-row">
-					<div class="label-wrapper">
-						<label for="hours">Kies het uur: </label>
-					</div>
-					<select id="hours">
-						<option value="1">1</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
-						<option value="4">4</option>
-						<option value="5">5</option>
-						<option value="6">6</option>
-						<option value="7">7</option>
-						<option value="8">8</option>
-						<option value="9">9</option>
-						<option value="10">10</option>
-						<option value="11">11</option>
-						<option value="12">12</option>
-					</select>
+				<div class="form-part">
+					<h2>De klok staat nu op: </h2>
+					<p id="clock-time">9 uur en 0 minuten</p>
 				</div>
-				<div class="form-row">
-					<div class="label-wrapper">
-						<label for="minutes">Kies de minuten: </label>
+
+				<div class="form-part">
+					<h2>Kies een tijd</h2>
+					<div class="column">
+						<div class="label-wrapper">
+							<label for="hours">Kies het uur: </label>
+						</div>
+						<select id="hours">
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+							<option value="4">4</option>
+							<option value="5">5</option>
+							<option value="6">6</option>
+							<option value="7">7</option>
+							<option value="8">8</option>
+							<option value="9">9</option>
+							<option value="10">10</option>
+							<option value="11">11</option>
+							<option value="12">12</option>
+						</select>
 					</div>
-					<select id="minutes">
-						<option value="0">0</option>
-						<option value="5">5</option>
-						<option value="10">10</option>
-						<option value="15">15</option>
-						<option value="20">20</option>
-						<option value="25">25</option>
-						<option value="30">30</option>
-						<option value="35">35</option>
-						<option value="40">40</option>
-						<option value="45">45</option>
-						<option value="50">50</option>
-						<option value="55">55</option>
-					</select>
+					<div class="column">
+						<div class="label-wrapper">
+							<label for="minutes">Kies de minuten: </label>
+						</div>
+						<select id="minutes">
+							<option value="0">0</option>
+							<option value="5">5</option>
+							<option value="10">10</option>
+							<option value="15">15</option>
+							<option value="20">20</option>
+							<option value="25">25</option>
+							<option value="30">30</option>
+							<option value="35">35</option>
+							<option value="40">40</option>
+							<option value="45">45</option>
+							<option value="50">50</option>
+							<option value="55">55</option>
+						</select>
+					</div>
 				</div>
+				
+					
+			
 			</div>
 		</div>
 	</body>
