--- a/index.html
+++ b/index.html
@@ -8,25 +8,19 @@
 	<script type="text/javascript" src="drawhands.js"></script>
 	<script type="text/javascript" src="changetime.js"></script>
 	<script type="text/javascript" src="readclock.js"></script>
+	<script type="text/javascript" src="gettime.js"></script>
 </head>
 	<body>
-		<div class="column">
-			<h1>Klok kijken</h1>
-			<section>
-				<canvas id="canvas_clock" width="500" height="500" style="width:100%; height:100%">
-				Canvas tag not supported
-				</canvas>
-			</section>
-		</div>
+
 		<div class="column">
 			<h1>Speel met de klok</h1>
 			<div id="choose-time">
-				<div class="form-part">
+				<section>
 					<h2>De klok staat nu op: </h2>
 					<p id="clock-time">9 uur en 0 minuten</p>
-				</div>
+				</section>
 
-				<div class="form-part">
+				<section>
 					<h2>Kies een tijd</h2>
 					<div class="column">
 						<div class="label-wrapper">
@@ -49,7 +43,7 @@
 					</div>
 					<div class="column">
 						<div class="label-wrapper">
-							<label for="minutes">Kies de minuten: </label>
+							<label for="minutes">Kies de minuten:</label>
 						</div>
 						<select id="minutes">
 							<option value="0">0</option>
@@ -66,8 +60,31 @@
 							<option value="55">55</option>
 						</select>
 					</div>
-				</div>
+				</section>
+
+				<section>
+					<h2>Beweeg de wijzers, zet de klok op:</h2>
+					<div style="width:100%;float:left;">
+						<p id="random-time">9 uur en 0 minuten</p>
+						<button id="check-time" type="button">Check de tijd</button>
+						<button id="new-time" type="button">Nieuwe tijd</button>
+					</div>
+					<div class="column">
+						<img src="images/zebra.jpg" alt="zebra" height="100%" width="100%">
+					</div>
+					<div class="column">
+						<canvas id="canvas-balloon" width="450" height="250" style="width:100%; height:100%"></canvas>
+					</div>
+
+				</section>	
 			</div>
+		</div>
+		<div class="column">
+			<section>
+				<canvas id="canvas-clock" width="500" height="500" style="width:100%; height:100%">
+				Canvas tag not supported
+				</canvas>
+			</section>
 		</div>
 	</body>
 </html>
