--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="js/changetime.js"></script>
 	<script type="text/javascript" src="js/readclock.js"></script>
 	<script type="text/javascript" src="js/menu.js"></script>
+	<script type="text/javascript" src="js/gettime.js"></script>
 </head>
 	<body>
 		<div class="menu-wrapper">
