--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
 				<button id="check-input" type="button">GA!</button>
 			</div>
 		</section>
+		<section id="color" class="hide menu-item">
+			<h2>Kies de kleuren van de klok</h2>
+				<div class="choose-color">
+					<p>Kies de kleur van de wijzerplaat</p>
+					<button id="pink" class="color-choice" type="button"></button>
+					<button id="green" class="color-choice" type="button"></button>
+					<button id="orange" class="color-choice" type="button"></button>
+					<button id="blue" class="color-choice" type="button"></button>
+				</div>
+				<div class="choose-color">
+					<p>Kies de kleur van de minutenwijzer</p>
+				</div>
+				<div class="choose-color">
+					<p>Kies de kleur van de urenwijzer</p>
+				</div>
+		</section>
 
 	</body>
 </html>
